<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">


    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.edu.tks</groupId>
    <artifactId>parent-project</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>parent-project</name>
    <packaging>pom</packaging>

    <properties>
        <spring.boot.version>2.6.4</spring.boot.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-parent</artifactId>
                <version>${spring.boot.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>javax</groupId>-->
<!--                <artifactId>javaee-api</artifactId>-->
<!--                <version>8.0.1</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.8.2</version>
                <scope>test</scope>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>org.glassfish.jersey.core</groupId>-->
<!--                <artifactId>jersey-client</artifactId>-->
<!--                <version>2.35</version>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.glassfish.jersey.inject</groupId>-->
<!--                <artifactId>jersey-hk2</artifactId>-->
<!--                <version>2.35</version>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.glassfish.jersey.media</groupId>-->
<!--                <artifactId>jersey-media-json-jackson</artifactId>-->
<!--                <version>2.35</version>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.4</version>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>javax.ws.rs</groupId>-->
<!--                <artifactId>javax.ws.rs-api</artifactId>-->
<!--                <version>2.1.1</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>com.google.code.gson</groupId>-->
<!--                <artifactId>gson</artifactId>-->
<!--                <version>2.8.9</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>io.rest-assured</groupId>-->
<!--                <artifactId>rest-assured</artifactId>-->
<!--                <version>4.3.3</version>-->
<!--                <scope>test</scope>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>com.googlecode.json-simple</groupId>-->
<!--                <artifactId>json-simple</artifactId>-->
<!--                <version>1.1.1</version>-->
<!--            </dependency>-->

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-web</artifactId>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <pluginManagement>
           <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.0.0-M5</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>

                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <modules>
        <module>repositories-adapters</module>
        <module>application-core</module>
        <module>view-adapters</module>
        <module>application-ports</module>
    </modules>

</project>
